fuzzer/CookiecutterJSONParser.py
# Generated from /media/steven/MaD/projects/cookiecutter/fuzzer/CookiecutterJSON.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CookiecutterJSONParser ( Parser ):

    grammarFileName = "CookiecutterJSON.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'['", "']'", "':'", "','", 
                     "'\"'", "'.'", "'*'", "'/'", "<INVALID>", "'_'", "'('", 
                     "')'", "<INVALID>", "' '", "'{{'", "'}}'", "'true'", 
                     "'false'", "'null'", "'project_name'", "'project_slug'", 
                     "'description'", "'full_name'", "'email'", "'version'", 
                     "'license'", "'repo_name'", "'module_name'", "'_copy_without_render'", 
                     "'_jinja2_env_vars'", "'_extensions'", "'_new_lines'", 
                     "'__prompts__'", "'template'", "'templates'" ]

    symbolicNames = [ "<INVALID>", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "COLON", "COMMA", "QUOTE", "DOT", "STAR", "SLASH", 
                      "DASH", "UNDERSCORE", "LPAREN", "RPAREN", "MINUS", 
                      "SPACE", "J2_OPEN", "J2_CLOSE", "TRUE", "FALSE", "NULL", 
                      "PROJECT_NAME", "PROJECT_SLUG", "DESCRIPTION", "FULL_NAME", 
                      "EMAIL", "VERSION", "LICENSE", "REPO_NAME", "MODULE_NAME", 
                      "COPY_WITHOUT_RENDER", "JINJA2_ENV_VARS", "EXTENSIONS", 
                      "NEW_LINES", "PROMPTS", "TEMPLATE", "TEMPLATES", "IDENT", 
                      "DIGITS", "J2_IDENT", "WS" ]

    RULE_start = 0
    RULE_object = 1
    RULE_pair = 2
    RULE_key = 3
    RULE_value = 4
    RULE_array = 5
    RULE_string = 6
    RULE_stringBody = 7
    RULE_textAtom = 8
    RULE_jinjaExpr = 9
    RULE_jinjaInner = 10
    RULE_number = 11
    RULE_bool = 12
    RULE_nullValue = 13

    ruleNames =  [ "start", "object", "pair", "key", "value", "array", "string", 
                   "stringBody", "textAtom", "jinjaExpr", "jinjaInner", 
                   "number", "bool", "nullValue" ]

    EOF = Token.EOF
    LBRACE=1
    RBRACE=2
    LBRACK=3
    RBRACK=4
    COLON=5
    COMMA=6
    QUOTE=7
    DOT=8
    STAR=9
    SLASH=10
    DASH=11
    UNDERSCORE=12
    LPAREN=13
    RPAREN=14
    MINUS=15
    SPACE=16
    J2_OPEN=17
    J2_CLOSE=18
    TRUE=19
    FALSE=20
    NULL=21
    PROJECT_NAME=22
    PROJECT_SLUG=23
    DESCRIPTION=24
    FULL_NAME=25
    EMAIL=26
    VERSION=27
    LICENSE=28
    REPO_NAME=29
    MODULE_NAME=30
    COPY_WITHOUT_RENDER=31
    JINJA2_ENV_VARS=32
    EXTENSIONS=33
    NEW_LINES=34
    PROMPTS=35
    TEMPLATE=36
    TEMPLATES=37
    IDENT=38
    DIGITS=39
    J2_IDENT=40
    WS=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def object_(self):
            return self.getTypedRuleContext(CookiecutterJSONParser.ObjectContext,0)


        def EOF(self):
            return self.getToken(CookiecutterJSONParser.EOF, 0)

        def getRuleIndex(self):
            return CookiecutterJSONParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = CookiecutterJSONParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.object_()
            self.state = 29
            self.match(CookiecutterJSONParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CookiecutterJSONParser.LBRACE, 0)

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CookiecutterJSONParser.PairContext)
            else:
                return self.getTypedRuleContext(CookiecutterJSONParser.PairContext,i)


        def RBRACE(self):
            return self.getToken(CookiecutterJSONParser.RBRACE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CookiecutterJSONParser.COMMA)
            else:
                return self.getToken(CookiecutterJSONParser.COMMA, i)

        def getRuleIndex(self):
            return CookiecutterJSONParser.RULE_object

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObject" ):
                listener.enterObject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObject" ):
                listener.exitObject(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObject" ):
                return visitor.visitObject(self)
            else:
                return visitor.visitChildren(self)




    def object_(self):

        localctx = CookiecutterJSONParser.ObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_object)
        self._la = 0 # Token type
        try:
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.match(CookiecutterJSONParser.LBRACE)
                self.state = 32
                self.pair()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 33
                    self.match(CookiecutterJSONParser.COMMA)
                    self.state = 34
                    self.pair()
                    self.state = 39
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 40
                self.match(CookiecutterJSONParser.RBRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 42
                self.match(CookiecutterJSONParser.LBRACE)
                self.state = 43
                self.match(CookiecutterJSONParser.RBRACE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(CookiecutterJSONParser.QUOTE)
            else:
                return self.getToken(CookiecutterJSONParser.QUOTE, i)

        def key(self):
            return self.getTypedRuleContext(CookiecutterJSONParser.KeyContext,0)


        def COLON(self):
            return self.getToken(CookiecutterJSONParser.COLON, 0)

        def value(self):
            return self.getTypedRuleContext(CookiecutterJSONParser.ValueContext,0)


        def getRuleIndex(self):
            return CookiecutterJSONParser.RULE_pair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPair" ):
                listener.enterPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPair" ):
                listener.exitPair(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPair" ):
                return visitor.visitPair(self)
            else:
                return visitor.visitChildren(self)




    def pair(self):

        localctx = CookiecutterJSONParser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(CookiecutterJSONParser.QUOTE)
            self.state = 47
            self.key()
            self.state = 48
            self.match(CookiecutterJSONParser.QUOTE)
            self.state = 49
            self.match(CookiecutterJSONParser.COLON)
            self.state = 50
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROJECT_NAME(self):
            return self.getToken(CookiecutterJSONParser.PROJECT_NAME, 0)

        def PROJECT_SLUG(self):
            return self.getToken(CookiecutterJSONParser.PROJECT_SLUG, 0)

        def DESCRIPTION(self):
            return self.getToken(CookiecutterJSONParser.DESCRIPTION, 0)

        def FULL_NAME(self):
            return self.getToken(CookiecutterJSONParser.FULL_NAME, 0)

        def EMAIL(self):
            return self.getToken(CookiecutterJSONParser.EMAIL, 0)

        def VERSION(self):
            return self.getToken(CookiecutterJSONParser.VERSION, 0)

        def LICENSE(self):
            return self.getToken(CookiecutterJSONParser.LICENSE, 0)

        def REPO_NAME(self):
            return self.getToken(CookiecutterJSONParser.REPO_NAME, 0)

        def MODULE_NAME(self):
            return self.getToken(CookiecutterJSONParser.MODULE_NAME, 0)

        def COPY_WITHOUT_RENDER(self):
            return self.getToken(CookiecutterJSONParser.COPY_WITHOUT_RENDER, 0)

        def JINJA2_ENV_VARS(self):
            return self.getToken(CookiecutterJSONParser.JINJA2_ENV_VARS, 0)

        def EXTENSIONS(self):
            return self.getToken(CookiecutterJSONParser.EXTENSIONS, 0)

        def NEW_LINES(self):
            return self.getToken(CookiecutterJSONParser.NEW_LINES, 0)

        def PROMPTS(self):
            return self.getToken(CookiecutterJSONParser.PROMPTS, 0)

        def TEMPLATE(self):
            return self.getToken(CookiecutterJSONParser.TEMPLATE, 0)

        def TEMPLATES(self):
            return self.getToken(CookiecutterJSONParser.TEMPLATES, 0)

        def IDENT(self):
            return self.getToken(CookiecutterJSONParser.IDENT, 0)

        def getRuleIndex(self):
            return CookiecutterJSONParser.RULE_key

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKey" ):
                listener.enterKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKey" ):
                listener.exitKey(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKey" ):
                return visitor.visitKey(self)
            else:
                return visitor.visitChildren(self)




    def key(self):

        localctx = CookiecutterJSONParser.KeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_key)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 549751619584) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(CookiecutterJSONParser.StringContext,0)


        def number(self):
            return self.getTypedRuleContext(CookiecutterJSONParser.NumberContext,0)


        def bool_(self):
            return self.getTypedRuleContext(CookiecutterJSONParser.BoolContext,0)


        def nullValue(self):
            return self.getTypedRuleContext(CookiecutterJSONParser.NullValueContext,0)


        def array(self):
            return self.getTypedRuleContext(CookiecutterJSONParser.ArrayContext,0)


        def object_(self):
            return self.getTypedRuleContext(CookiecutterJSONParser.ObjectContext,0)


        def getRuleIndex(self):
            return CookiecutterJSONParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = CookiecutterJSONParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_value)
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.string()
                pass
            elif token in [15, 39]:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.number()
                pass
            elif token in [19, 20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.bool_()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.nullValue()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 5)
                self.state = 58
                self.array()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 6)
                self.state = 59
                self.object_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(CookiecutterJSONParser.LBRACK, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CookiecutterJSONParser.ValueContext)
            else:
                return self.getTypedRuleContext(CookiecutterJSONParser.ValueContext,i)


        def RBRACK(self):
            return self.getToken(CookiecutterJSONParser.RBRACK, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CookiecutterJSONParser.COMMA)
            else:
                return self.getToken(CookiecutterJSONParser.COMMA, i)

        def getRuleIndex(self):
            return CookiecutterJSONParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = CookiecutterJSONParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(CookiecutterJSONParser.LBRACK)
                self.state = 63
                self.value()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 64
                    self.match(CookiecutterJSONParser.COMMA)
                    self.state = 65
                    self.value()
                    self.state = 70
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 71
                self.match(CookiecutterJSONParser.RBRACK)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.match(CookiecutterJSONParser.LBRACK)
                self.state = 74
                self.match(CookiecutterJSONParser.RBRACK)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(CookiecutterJSONParser.QUOTE)
            else:
                return self.getToken(CookiecutterJSONParser.QUOTE, i)

        def stringBody(self):
            return self.getTypedRuleContext(CookiecutterJSONParser.StringBodyContext,0)


        def getRuleIndex(self):
            return CookiecutterJSONParser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = CookiecutterJSONParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(CookiecutterJSONParser.QUOTE)
            self.state = 78
            self.stringBody()
            self.state = 79
            self.match(CookiecutterJSONParser.QUOTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def textAtom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CookiecutterJSONParser.TextAtomContext)
            else:
                return self.getTypedRuleContext(CookiecutterJSONParser.TextAtomContext,i)


        def jinjaExpr(self):
            return self.getTypedRuleContext(CookiecutterJSONParser.JinjaExprContext,0)


        def getRuleIndex(self):
            return CookiecutterJSONParser.RULE_stringBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringBody" ):
                listener.enterStringBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringBody" ):
                listener.exitStringBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringBody" ):
                return visitor.visitStringBody(self)
            else:
                return visitor.visitChildren(self)




    def stringBody(self):

        localctx = CookiecutterJSONParser.StringBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stringBody)
        self._la = 0 # Token type
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 81
                    self.textAtom()
                    self.state = 84 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 824633794304) != 0)):
                        break

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.jinjaExpr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 824633794304) != 0):
                    self.state = 87
                    self.textAtom()
                    self.state = 92
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 93
                self.jinjaExpr()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 824633794304) != 0):
                    self.state = 94
                    self.textAtom()
                    self.state = 99
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextAtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(CookiecutterJSONParser.IDENT, 0)

        def DASH(self):
            return self.getToken(CookiecutterJSONParser.DASH, 0)

        def DOT(self):
            return self.getToken(CookiecutterJSONParser.DOT, 0)

        def SLASH(self):
            return self.getToken(CookiecutterJSONParser.SLASH, 0)

        def STAR(self):
            return self.getToken(CookiecutterJSONParser.STAR, 0)

        def UNDERSCORE(self):
            return self.getToken(CookiecutterJSONParser.UNDERSCORE, 0)

        def SPACE(self):
            return self.getToken(CookiecutterJSONParser.SPACE, 0)

        def DIGITS(self):
            return self.getToken(CookiecutterJSONParser.DIGITS, 0)

        def getRuleIndex(self):
            return CookiecutterJSONParser.RULE_textAtom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTextAtom" ):
                listener.enterTextAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTextAtom" ):
                listener.exitTextAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTextAtom" ):
                return visitor.visitTextAtom(self)
            else:
                return visitor.visitChildren(self)




    def textAtom(self):

        localctx = CookiecutterJSONParser.TextAtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_textAtom)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 824633794304) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JinjaExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def J2_OPEN(self):
            return self.getToken(CookiecutterJSONParser.J2_OPEN, 0)

        def jinjaInner(self):
            return self.getTypedRuleContext(CookiecutterJSONParser.JinjaInnerContext,0)


        def J2_CLOSE(self):
            return self.getToken(CookiecutterJSONParser.J2_CLOSE, 0)

        def getRuleIndex(self):
            return CookiecutterJSONParser.RULE_jinjaExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJinjaExpr" ):
                listener.enterJinjaExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJinjaExpr" ):
                listener.exitJinjaExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJinjaExpr" ):
                return visitor.visitJinjaExpr(self)
            else:
                return visitor.visitChildren(self)




    def jinjaExpr(self):

        localctx = CookiecutterJSONParser.JinjaExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_jinjaExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(CookiecutterJSONParser.J2_OPEN)
            self.state = 105
            self.jinjaInner()
            self.state = 106
            self.match(CookiecutterJSONParser.J2_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JinjaInnerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def J2_IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(CookiecutterJSONParser.J2_IDENT)
            else:
                return self.getToken(CookiecutterJSONParser.J2_IDENT, i)

        def DOT(self):
            return self.getToken(CookiecutterJSONParser.DOT, 0)

        def LPAREN(self):
            return self.getToken(CookiecutterJSONParser.LPAREN, 0)

        def QUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(CookiecutterJSONParser.QUOTE)
            else:
                return self.getToken(CookiecutterJSONParser.QUOTE, i)

        def COMMA(self):
            return self.getToken(CookiecutterJSONParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(CookiecutterJSONParser.RPAREN, 0)

        def getRuleIndex(self):
            return CookiecutterJSONParser.RULE_jinjaInner

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJinjaInner" ):
                listener.enterJinjaInner(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJinjaInner" ):
                listener.exitJinjaInner(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJinjaInner" ):
                return visitor.visitJinjaInner(self)
            else:
                return visitor.visitChildren(self)




    def jinjaInner(self):

        localctx = CookiecutterJSONParser.JinjaInnerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_jinjaInner)
        try:
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(CookiecutterJSONParser.J2_IDENT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(CookiecutterJSONParser.J2_IDENT)
                self.state = 110
                self.match(CookiecutterJSONParser.DOT)
                self.state = 111
                self.match(CookiecutterJSONParser.J2_IDENT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.match(CookiecutterJSONParser.J2_IDENT)
                self.state = 113
                self.match(CookiecutterJSONParser.DOT)
                self.state = 114
                self.match(CookiecutterJSONParser.J2_IDENT)
                self.state = 115
                self.match(CookiecutterJSONParser.LPAREN)
                self.state = 116
                self.match(CookiecutterJSONParser.QUOTE)
                self.state = 117
                self.match(CookiecutterJSONParser.J2_IDENT)
                self.state = 118
                self.match(CookiecutterJSONParser.QUOTE)
                self.state = 119
                self.match(CookiecutterJSONParser.COMMA)
                self.state = 120
                self.match(CookiecutterJSONParser.QUOTE)
                self.state = 121
                self.match(CookiecutterJSONParser.J2_IDENT)
                self.state = 122
                self.match(CookiecutterJSONParser.QUOTE)
                self.state = 123
                self.match(CookiecutterJSONParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGITS(self, i:int=None):
            if i is None:
                return self.getTokens(CookiecutterJSONParser.DIGITS)
            else:
                return self.getToken(CookiecutterJSONParser.DIGITS, i)

        def MINUS(self):
            return self.getToken(CookiecutterJSONParser.MINUS, 0)

        def DOT(self):
            return self.getToken(CookiecutterJSONParser.DOT, 0)

        def getRuleIndex(self):
            return CookiecutterJSONParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):
